# TemportalEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  Cargo.toml  Project.sln  README.md  TemportalEngine.sln  TemportalEngine.vcxproj  TemportalEngine.vcxproj.filters  build.rs  build.xml  buildGNS.sh  buildGameNetworkingSockets.sh  buildPhysX.sh  compileShaders.sh  setupGNS.sh  workspace.json  workspace.py
DemoGame/: DemoGame.te-asset  DemoGame.te-project  DemoGame.vcxproj  DemoGame.vcxproj.filters  main.cpp
Editor/: Editor.vcxproj  (+1 more)
demo/boid/demo/: Cargo.toml  renderdoc.cap
demo/boid/demo/assets/: fragment.glsl
demo/boid/demo/src/: game_context.rs  input.rs  lib.rs  main.rs
demo/boid/demo/src/ecs/: mod.rs
demo/boid/demo/src/ecs/components/: mod.rs
demo/boid/demo/src/ecs/systems/: input_create_entity.rs  input_destroy_entity.rs  mod.rs  move_entities.rs
demo/boid/demo/src/graphics/: boid_vertex.rs  mod.rs  render_boids.rs
demo/boid/demo/src/ui/: carousel.rs  controls_info.rs  counter.rs  mod.rs  root.rs
demo/chat-room/demo/: Cargo.toml
demo/chat-room/demo/src/: lib.rs  main.rs  message_history.rs
demo/chat-room/demo/src/packet/: connection.rs  handshake.rs  message.rs  mod.rs
demo/chat-room/demo/src/ui/: input.rs  log.rs  mod.rs  root.rs
demo/triangle-editor/: Cargo.toml
demo/triangle-editor/src/: main.rs
demo/triangle/demo/: .gitignore  Cargo.toml  renderdoc.cap
demo/triangle/demo/src/: lib.rs  main.rs  renderer.rs  vertex.rs
demo/ui/demo/: Cargo.toml
demo/ui/demo/src/: lib.rs  main.rs
demo/ui/editor/: Cargo.toml
demo/ui/editor/src/: main.rs
editor/: Cargo.toml
editor/assets/: imgui_frag.glsl  imgui_frag.json  imgui_vert.glsl
editor/assets/icons/: open-folder.kdl
editor/src/: editor.rs  lib.rs  settings.rs  ui.rs
editor/src/asset/: _.rs  build.rs  error.rs  manager.rs  metadata.rs  mod.rs  package.rs  path.rs
editor/src/audio/: mod.rs  sound.rs
editor/src/config/: crates.rs  mod.rs
editor/src/graphics/: _.rs  font.rs  mod.rs  procedure_config.rs  render_pass.rs  sdf-builder.rs  shader.rs  texture.rs
editor/src/graphics/render_pass/: attachment.rs  pass.rs  subpass.rs
editor/src/ui/: _.rs  element.rs  icons.rs  mod.rs  ui.rs  windows.rs  workspace.rs
editor/src/ui/windows/: _.rs  asset_browser.rs  open_window_list.rs  simulation.rs
engine/: Cargo.toml
engine/assets/font/unispace/: bold.json  italic.json  regular.json
engine/assets/shaders/debug/egui/: fragment.glsl  vertex.glsl
engine/assets/shaders/ui/mesh/: image_fragment.glsl  simple_fragment.glsl
engine/assets/shaders/ui/text/: fragment.glsl  vertex.glsl
engine/src/: application.rs  asset.rs  ecs.rs  engine.rs  graphics.rs  input.rs  lib.rs  logging.rs  task.rs  ui.rs  utility.rs  window.rs  world.rs
engine/src/asset/: asset.rs  error.rs  id.rs  library.rs  loader.rs  mod.rs  statics.rs  types.rs  weighted_list.rs
engine/src/audio/: error.rs  mod.rs  sound.rs  source_kind.rs
engine/src/audio/decoder/: mod.rs  mpeg.rs  track.rs  vorbis.rs  wav.rs
engine/src/audio/source/: asset.rs  mod.rs  sequence.rs
engine/src/ecs/: components.rs  context.rs  mod.rs  resources.rs  systems.rs
engine/src/ecs/components/: ai.rs  mod.rs  orientation.rs  position_2d.rs  velocity_2d.rs
engine/src/ecs/components/ai/: mod.rs  steering.rs  wander_2d.rs
engine/src/ecs/components/ai/steering/: align.rs  mod.rs  neighborhood.rs  steering.rs
engine/src/ecs/resources/: delta_time.rs  mod.rs
engine/src/ecs/systems/: draw_forward.rs  mod.rs
engine/src/ecs/systems/ai/: draw_neighborhoods.rs  mod.rs  weighted_steering.rs
engine/src/graphics/: camera.rs  camera_test.rs  chain.rs  descriptor_cache.rs  drawable.rs  font.rs  image_cache.rs  mesh.rs  mod.rs  render_chain.rs  render_pass.rs  resource.rs  shader.rs  shader_set.rs  task.rs  texture.rs  types.rs  uniform.rs
engine/src/graphics/camera/: camera.rs  uniform.rs
engine/src/graphics/chain/: chain.rs  chain_builder.rs  operation.rs  procedure.rs  resolution_provider.rs
engine/src/graphics/render_pass/: attachment.rs  mod.rs  pass.rs  subpass.rs
engine/src/graphics/resource/: color_buffer.rs  depth_buffer.rs
engine/src/graphics/types/: mat4.rs  mod.rs  vec2.rs  vec3.rs  vec4.rs
engine/src/math/: mod.rs  ops.rs
engine/src/network/: builder.rs  error.rs  event.rs  kind.rs  local_data.rs  mod.rs  mode.rs  network.rs  receiver.rs  sender.rs  socket.rs
engine/src/network/connection/: connection.rs  list.rs  mod.rs  process_connect.rs  process_disconnect.rs
engine/src/network/event/: event.rs  queue.rs
engine/src/network/packet/: guarantee.rs  kind.rs  mod.rs  packet.rs  payload.rs  processor.rs  queue.rs  registry.rs
engine/src/network/processor/: connection_proc.rs  mod.rs  registry.rs  stopper_proc.rs
engine/src/render/: debug_render.rs  mod.rs
engine/src/task/: future.rs  scope.rs  sender.rs  task.rs  watcher.rs
engine/src/ui/: egui.rs  error.rs  mod.rs  system.rs
engine/src/ui/core/: error.rs  mod.rs
engine/src/ui/core/image/: data_pipeline.rs  mod.rs
engine/src/ui/core/text/: data_pipeline.rs  font.rs  widget_data.rs
engine/src/ui/egui/: conversions.rs  element.rs  renderer.rs  window.rs
engine/src/ui/egui/window/: list.rs
engine/src/ui/image/: data_pipeline.rs
engine/src/ui/oui/: mod.rs  viewport.rs
engine/src/ui/oui/widget/: button.rs  image_box.rs  mod.rs  size_box.rs  text.rs
engine/src/ui/oui/widget/container/: container.rs  content_box.rs  mod.rs  slot.rs
engine/src/ui/raui/: mod.rs
engine/src/ui/text/: data_pipeline.rs  font.rs  mod.rs  widget_data.rs
engine/src/utility/: error.rs  kdl.rs  mod.rs  save_data.rs  singleton.rs  value_set.rs
engine/src/window/: builder.rs  window.rs
socknet/socknet/: Cargo.toml
socknet/socknet/src/: lib.rs  socket.rs
socknet/socknet/src/event/: event.rs  mod.rs  queue.rs
socknet/socknet/src/packet/: guarantee.rs  kind.rs  mod.rs  packet.rs  payload.rs  processor.rs  queue.rs  registration.rs
socknet/socknet/src/socket/: default.rs  factory.rs  mod.rs
utility/: Cargo.toml
utility/src/: registry.rs
(+1440 files in other folders)
