[package]
name = "temportal-engine"
version = "0.1.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
temportal-math = { path = "../temportal-math" }
temportal-graphics = { path = "../temportal-graphics" }
log = { version = "0.4", features = ["std"] }
simplelog = "0.10"
raw-window-handle = "0.3"
sdl2 = { version = "0.34", features = ["raw-window-handle"] }
serde = { version = "1.0", features = ["derive"] }
rmp = "0.8"
rmp-serde = "0.15"
zip = "0.5"
physx = "0.11"
optick = "1.3"
specs = { version = "0.16", features = ["shred-derive"] }

[build-dependencies]
extern-reader = { path = "../extern-reader" }
