[package]
name = "temportal-engine-editor"
version = "0.1.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine", package = "temportal-engine" }
bytemuck = "1.7"
copypasta = "0.7"
egui = "0.15"
log = { version = "0.4", features = ["std"] }
rmp = "0.8"
rmp-serde = "0.15"
serde = { version = "1.0", features = ["derive"] }
webbrowser = "0.5.5"
winit = "0.25"
zip = "0.5"

cargo_toml = "0.9"
freetype-rs = "0.28"
image = "0.23"
kdl = "3.0"
kdl-schema = { path = "../crates/kdl-schema" }
semver = "1.0.3"
serde_json = "1.0"
shaderc = "0.7"
