[package]
name = "temportal-engine"
version = "0.1.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
temportal-engine-utilities = { path = "../utility" }

# [log] backend for the log crate to output logging to multiple locations
simplelog = "0.12"
time = "0.3"
# [metrics] for writing runtime information to log file/console
log = { version = "0.4", features = ["std"] }
# [metrics] for getting performance information and rendering via any chosen viewer
profiling = { version = "1.0.7", features = ["profile-with-tracy"] }
tracy-client = "0.14.1"

# [error] collapsing any error into one result type
anyhow = "1.0"
# [error] easy implementation of new errors
thiserror = "1.0"

# [channel] [ sync] single-producer multi-consumer  multi-consumption
bus = "2.2"
# [channel] [ sync]  multi-producer multi-consumer single-consumption
crossbeam-channel = "0.5"
# [channel] [async]  multi-producer multi-consumer single-consumption
async-channel = "1.6"

# [async] base async traits
futures = "0.3"
# [async] adv async traits
futures-util = "0.3"
# [async] async/await syntax and multithreading
tokio = { version = "1.15", features = ["full"] }
# [async] helper for getting the number of CPS for multithreading
num_cpus = { version = "1.8" }
# [utility] for managing zip (and thereby pak) files
zip = "0.6"
# [utility] for managing zip (and thereby pak) files
async_zip = "0.0.9"
sanitize-filename = "0.4"

# [ui] debug immediate-mode UI
egui = "0.19"
egui-winit = "0.19"
# [ui] for handling UI widgets - rendering is built-into the engine and leverages tesselation
raui = { version = ">=0.35", features = ["material", "tesselate"] }

# [serialization] general usage
serde = { version = "1.0", features = ["derive"] }
# [serialization] RustMessagePack binary
rmp = "0.8"
# [serialization] RustMessagePack binary
rmp-serde = "1.1"
# [serialization] node-like syntax
kdl = "4.6"
# [serialization] kdl wrapper for enforcing schemas
kdl-schema = { path = "../crates/kdl-schema" }

# [collections] similar to a bitmap but for any enum with a derive-trait implemented
enumset = { version = "1.0", features = ["serde"] }
# [collections] one-to-many_of<T> relationship data structure
multimap = "0.8"

# [audio] for managing audio playback and mixing
oddio = "0.6"
# [audio] for manaing audio devices
cpal = "0.14"
# [audio] for parsing wav audio binaries
hound = "3.4"
# [audio] for parsing vorbis/ogg audio binaries
lewton = "0.10"
# [audio] for parsing mp3 audio binaries
minimp3 = "0.5"

# [input] for processing user input from winit and gamepads using a user-defined configuration
input-actions = { path = "../input-actions", features = ["winit", "log"] }

# [math] for math interoperability
mint = "0.5"
# [math] for math types and functions
nalgebra = { version = "0.31", features = ["serde-serialize"] }
approx = "0.5"

# [window] for interoperability of winit and vulkan-rs
raw-window-handle = "0.5"
# [window] for opening a window and getting user input
winit = "0.27"
# [graphics] backend for rendering graphics to a window / working with the GPU
vulkan-rs = { path = "../vulkan-rs/vulkan", features = ["derive"] }

# [utility] helpers for managing bytes - required for egui
bytemuck = "1.7"
# [utility] interacting with the clipcoard - required for egui
copypasta = "0.8"
# [utility] interacting with hyperlinks/web browsers - required for egui
webbrowser = "0.8"

# [utility] pseudo/generated randomness
rand = "0.8"
regex = "1.5"
# [utility] catching signals like CTRL+C from the terminal
signal-hook = "0.3"
# [utility] semantic versioning
semver = "1.0"
# [utility] one-line implementation for builder pattern
derive_builder = "0.11"

# DEPRECATED
specs = { version = "0.16", features = ["shred-derive"] }
