[package]
name = "demo-triangle-editor"
version = "0.1.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
temportal-engine = { path = "../../temportal-engine" }
temportal-engine-editor = { path = "../../temportal-engine-editor" }
demo-triangle = { path = "../triangle" }
imgui = "0.7"
log = "0.4.14"
