[package]
name = "socknet"
version = "0.1.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
derive = ["socknet-derive"]

[dependencies]
socknet-derive = { version = "0.1.0", optional = true, path = "../derive" }
# [networking] dependency from `laminar` used to send packers/receive events
crossbeam-channel = "0.5"
# [networking] for making socket connections and polling for data
laminar = "0.5.0"
log = "0.4"
# [serialization] expanded serialization support
rmp = "0.8"
# [serialization] expanded serialization support for serde
rmp-serde = "0.15"
# [serialization]
serde = { version = "1.0", features = ["derive"] }
temportal-engine-utilities = { path = "../../utility" }
