[package]
name = "chat-room"
version = "0.1.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
temportal-engine = { path = "../../../engine" }
chrono = { version = "0.4", features = ["serde"]}
log = "0.4"
# [serialization] expanded serialization support
rmp = "0.8"
# [serialization] expanded serialization support for serde
rmp-serde = "0.15"
# [utility] semantic versioning
semver = "1.0"
# [serialization]
serde = { version = "1.0", features = ["derive"] }
profiling = "1.0"
