[package]
name = "demo-triangle"
version = "0.1.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../../../engine", package = "temportal-engine" }
log = "0.4.14"
semver = "1.0"
tokio = "1.15"
anyhow = "1.0"
