[package]
name = "demo-ui-editor"
version = "0.1.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../../../engine", package = "temportal-engine" }
editor = { path = "../../../editor", package = "temportal-engine-editor" }
demo-ui = { path = "../demo" }
log = "0.4.14"
tokio = "1.15"
anyhow = "1.0"
